src/test/deca/context/invalid/booleanEqNull.deca
// Description:
//    boolean = null
//
// Resultats:
//    Assignment Error
//
// Historique:
//    cree le 08/01/2023

{
	
	boolean a = null	
}
